--- a/webroot/css/mine.css
+++ b/webroot/css/mine.css
@@ -37,7 +37,7 @@ div p {
     font-weight: 400;
     font-style: normal;
     font-size: 13px;
-    text-align: center;
+    text-align: left;
     line-height: normal;
 
 }
