added border to cell

--- a/webroot/css/mine.css
+++ b/webroot/css/mine.css
@@ -547,3 +547,8 @@ input[type=checkbox], input[type=radio] {
 
     color: white;
 }
+.border-botton-line{
+
+    border-bottom: 2px solid #640032 ;
+
+}
